--- a/client/src/components/Parallax/Parallax.css
+++ b/client/src/components/Parallax/Parallax.css
@@ -5,7 +5,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   height: 350px;
-  border: 5px solid #368265;
+  border: 5px solid red;
   opacity: 0.75;
   margin: 60px 0px 60px 0px;
 }
